<resources>
    <string name="app_name">ARtGallery</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_catalogue">Каталог</string>
    <string name="title_profile">Профиль</string>
    <string name="password">Пароль</string>
    <string name="sign_in_action">Войти</string>
    <string name="non_auth">Войдите</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--  Buttons  -->
    <string name="bt_back">Назад</string>


    <!-- Preview   -->
    <string name="preview_appname">ARt\nGallery</string>
    <string name="preview_button">Вперед\nк прекрасному</string>

    <!--    Sign in-->
    <string name="sign_in">Вход</string>
    <string name="email">Почта</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_account">Ещё нет аккаунта?</string>
    <string name="sign_in_success">Вход совершен</string>
    <string name="sign_in_error">Ошибка регистрации. Перепроверьте данные.</string>


    <!--  Sign up  -->
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="email_sign_up">Почта</string>
    <string name="phone">Телефон</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="be_account">Уже есть аккаунт?</string>
    <string name="sign_up_error">Ошибка регистрации. Перепроверьте данные.</string>
    <string name="sign_up_ver">На Вашу посту отправлено письмо с подтверждением регистрации</string>
    <string name="sign_up_ver_error">Не удалось отправить письмо с подтверждением регистрации</string>

    <!--  Catalogue  -->
    <string name="catalogue">Каталог</string>
    <string name="search">Поиск</string>

    <!--  Home  -->
    <string name="for_you">Подборка для вас</string>
    <string name="art_of_day">Картина дня</string>

    <!--  Profile  -->
    <string name="favorites">Избранное</string>
    <string name="basket">Корзина</string>
    <string name="shop">Покупки</string>
    <string name="settings">Настройки</string>
    <string name="privileges">ARtGallery, 2023. Все права защищены\nartgallerysmr@yandex.ru</string>

    <!--  Picture info  -->
    <string name="ar">AR - просмотр</string>

    <!--  Edit -->
    <string name="hb">Дата рождения</string>
    <string name="change_password">Изменить пароль</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>