<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/picture_info_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/picture_info_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/bt_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UnknownId">

            <ImageView
                android:id="@+id/edit_profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/edit_profile_photo" />

            <ImageButton
                android:id="@+id/edit_profile_photo_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:layerType="hardware"
                app:layout_constraintEnd_toStartOf="@+id/edit_profile_photo"
                app:layout_constraintHorizontal_bias="2.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/edit_change_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/picture_info_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="79dp"
                android:layout_height="92dp"
                android:src="@drawable/exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_edittext_name"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_edittext"
        android:ems="10"
        android:fontFamily="@font/literata"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColorHint="@color/puddle"
        android:textSize="20sp"/>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_edittext_surname"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_edittext"
        android:ems="10"
        android:fontFamily="@font/literata"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColorHint="@color/puddle"
        android:textSize="20sp"/>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_edittext_bd"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_edittext"
        android:ems="10"
        android:fontFamily="@font/literata"
        android:hint="@string/hb"
        android:inputType="date"
        android:paddingStart="10dp"
        android:textColorHint="@color/puddle"
        android:textSize="20sp" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_edittext_phone"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_edittext"
        android:ems="10"
        android:fontFamily="@font/literata"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColorHint="@color/puddle"
        android:textSize="20sp" />

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edit_edittext_email"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_edittext"
        android:ems="10"
        android:fontFamily="@font/literata"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColorHint="@color/puddle"
        android:textSize="20sp" />

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/activity_edit_shape1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
